logs/Slang/chapter-11/11.9--tagged_union_member_access_inv.sv.log
name: tagged_union_member_access_inv
description: invalid tagged union member access test
should_fail: 1
tags: 11.9
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.9--tagged_union_member_access_inv.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.9--tagged_union_member_access_inv.sv:9:9: error: language feature not yet supported
typedef union tagged {
        ^~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.9--tagged_union_member_access_inv.sv:19:6: error: language feature not yet supported
	a = tagged Invalid;
	    ^~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.9--tagged_union_member_access_inv.sv:20:6: error: language feature not yet supported
	b = tagged Valid(42);
	    ^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.9--tagged_union_member_access_inv.sv:20:18: error: expected ';'
	b = tagged Valid(42);
	                ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.9--tagged_union_member_access_inv.sv:20:18: error: expected statement
	b = tagged Valid(42);
	                ^
